# Wave2D-Perf

./: .gitignore  CMakeLists.txt  README-step1.md  README.md
build_cuda/: CMakeCache.txt
include/physics/: benchmark.hpp  compiler.hpp  config.hpp  field.hpp  simd.hpp  solvers.hpp
src/: benchmark.cpp  config.cpp  field.cpp  main.cpp
src/solvers/: cn_adi_cuda.cpp  cn_adi_cuda.cu  cn_adi_solver.cpp  cuda_solver.cu  cuda_stub.cpp  euler_solver.cpp  naive_solver.cpp  soa_solver.cpp
tools/: animate_simulation.py  plot_benchmark.py
